# src/Form/UserType.php
@@ -1,30 +1,0 @@
-<?php
-
-namespace App\Form;
-
-use App\Entity\User;
-use Symfony\Component\Form\AbstractType;
-use ApiPlatform\Core\Annotation\ApiResource;
-use Symfony\Component\Form\FormBuilderInterface;
-use Symfony\Component\OptionsResolver\OptionsResolver;
-
-
-/** A user form. */
-//#[ApiResource]
-class UserType extends AbstractType
-{
-    public function buildForm(FormBuilderInterface $builder, array $options): void
-    {
-        $builder
-            ->add('email')
-            ->add('referral_link')
-        ;
-    }
-
-    public function configureOptions(OptionsResolver $resolver): void
-    {
-        $resolver->setDefaults([
-            'data_class' => User::class,
-        ]);
-    }
-}
